# live

./: .env.local  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.json  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  lighthouserc.js  manage.py  pyproject.toml  requirements.txt  setup.sql  start_containers  start_live  uwsgi.ini
.github/workflows/: black.yml  codeql-analysis.yml  django.yml  gixy-ci.yml  hadolint-ci.yml  lighthouse-ci.yml  security_checks.yml  shellcheck.yml
compose/django/: Dockerfile  Dockerfile-dev  entrypoint.sh  gunicorn.conf.py  start.sh
compose/memcached/: Dockerfile  entrypoint.sh
compose/nginx/: Dockerfile  entrypoint.sh  nginx.conf
compose/postgres/: Dockerfile  restore.sh
compose/redis/: Dockerfile  redis.conf
compose/secrets/debug/: django_superuser_password.txt  django_superuser_username.txt
compose/secrets/development/: django_superuser_email.txt  postgres_db.txt  postgres_password.txt  postgres_user.txt  secret_key.txt  sendgrid_api_key.txt
docs/: development.md  setup.sql
docs/deployment/: compose_architecture.py  heroku.md  self-hosted.md
hacktj_live/: asgi.py  forms.py  manage.py  middlewares.py  routing.py  settings.py  urls.py  views.py  wsgi.py
hacktj_live/contrib/sites/migrations/: 0001_initial.py  0003_set_site_domain_and_name.py  0004_alter_options_ordering_domain.py  (+1 more)
hacktj_live/hacktj_live/: asgi.py  settings.py  urls.py  wsgi.py
judge/: admin.py  apps.py  consumers.py  controllers.py  crowd_bt.py  models.py  routing.py  urls.py  views.py
judge/fixtures/: data-75.json  projects-60.json  projects-75.json  winners-60.json
judge/management/commands/: getjudgesfromproject.py  getwinners.py  preparedevpost.py  reassignjudge.py
judge/migrations/: 0001_initial.py  0002_auto_20210331_1725.py  0002_decision.py  0003_auto_20200903_1553.py  0003_auto_20210331_1933.py  0004_auto_20200918_0139.py  0004_auto_20210331_2051.py  0005_auto_20201119_2225.py  0005_auto_20210405_1412.py  0006_annotator_viewed.py  0006_auto_20211114_2300.py  0007_alter_annotator_current_alter_annotator_ignore_and_more.py  0007_project_link.py  0008_auto_20201129_0054.py  0008_remove_project_tags_project_tags.py  0009_auto_20201129_0338.py  0010_auto_20201129_0345.py  0011_auto_20201129_0351.py  0012_auto_20201206_0231.py  0013_auto_20201206_0304.py  0014_project_tags.py  0015_auto_20201213_2302.py
judge/templates/: scoreboard.html
judge/templates/judge/: begin.html  done.html  judge_home.html  no_projects.html  presentation_timer.html  queue.html  rubric.html  scoreboard.html  scoreboard_ws.html  vote.html  welcome.html
judge/tests/: devpost-60.csv  devpost-75.csv  test_crowd_bt.py
mentor/: apps.py
static/: .gitignore
static/CACHE/css/: output.bc015ea72d17.css
static/CACHE/js/: output.a056e8f0f4e7.js
static/css/: tailwind.min.css
static/js/tablesort/: tablesort.number.min.js
tailwind/: .gitignore  .pnp.cjs  .pnp.js  package.json  postcss.config.js  tailwind.config.js
tailwind/static/: .gitignore  .pnp.js  package.json  postcss.config.js  tailwind.config.js
tailwind/static/css/: tailwind.min.css
templates/: base.html  credits.html  index.html  spreadsheet.html  timer.html
templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
utils/: adapters.py  admin.py  apps.py  environment.py  models.py  signals.py
utils/fixtures/: data-75.json
utils/management/commands/: createsecrets.py  redactdata.py
utils/migrations/: 0001_initial.py  0002_alter_liveuser_id.py
utils/templatetags/: random_strings.py
utils/tests/: __init__.py  test_commands.py
(+4 files in other folders)
