[tool.poetry]
name = "hacktj_live"
version = "0.1.0"
description = "A massively scalable application for realtime hackathon judging and mentoring."
authors = ["Sumanth Ratna <sumanth@hacktj.org>", "Pranav Mathur <pranav@hacktj.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"
channels = "^2.4.0"
gunicorn = "^20.0.4"
uvicorn = { extras = ["standard"], version = "^0.12.2" }
python-memcached = "^1.59"
channels-redis = "^3.2.0"
psycopg2 = "^2.8.6"
numpy = "^1.19.3"
scipy = "^1.5.3"
dj-database-url = "^0.5.0"
django-compressor = "^2.4"
django-dbbackup = "^3.3.0"
django-debug-toolbar = "^3.1.1"
django-allauth = "^0.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
