[tool.poetry]
name = "hacktj_live"
version = "0.1.0"
description = "A massively scalable application for realtime hackathon judging and mentoring."
authors = ["Sumanth Ratna <sumanth@hacktj.org>", "Pranav Mathur <pranav@hacktj.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = { extras = ["argon2", "bcrypt"], version = "^3.1.2"}
channels = "^3.0.2"
gunicorn = "^20.0.4"
uvicorn = { extras = ["standard"], version = "^0.12.2" }
python-memcached = "^1.59"
channels-redis = "^3.2.0"
psycopg2 = "^2.8.6"
numpy = "^1.19.3"
scipy = "^1.5.3"
dj-database-url = "^0.5.0"
django-compressor = "^2.4"
django-dbbackup = {git = "https://github.com/django-dbbackup/django-dbbackup.git"}  # PR #361
django-debug-toolbar = "^3.1.1"
django-allauth = "^0.44.0"
better-exceptions = "^0.2.2"
whitenoise = { extras = ["brotli"], version = "^5.2.0" }
Twisted = {extras = ["tls", "http2"], version = "^20.3.0"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.yarn
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | static
  )/
)
'''
