[tool.poetry]
name = "hacktj_live"
version = "0.1.0"
description = "A massively scalable application for realtime hackathon judging and mentoring."
authors = ["Sumanth Ratna <sumanth@hacktj.org>", "Pranav Mathur <pranav@hacktj.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
Django = {extras = ["argon2", "bcrypt"], version = "^3.1.2"}
channels = "^3.0.2"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version = "^0.13.0"}
channels-redis = {extras = ["cryptography"], version = "^3.2.0"}
psycopg2 = "^2.8.6"
numpy = "^1.19.3"
scipy = "^1.5.3"
dj-database-url = {git = "https://github.com/jacobian/dj-database-url.git"}  # commit 8b48e4bd40e28816a5f0ccc65a1a09e7a474de89
django-compressor = "^2.4"
django-dbbackup = {git = "https://github.com/django-dbbackup/django-dbbackup.git"}  # PR #361
django-debug-toolbar = "^3.1.1"
django-allauth = "^0.44.0"
better-exceptions = "^0.3.2"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
Twisted = {extras = ["tls", "http2"], version = "^20.3.0"}
django-simple-captcha = "^0.5.13"
dealer = "^2.1.0"
prettytable = "^2.0.0"
django-sendgrid-v5 = "^0.9.1"
pymemcache = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
diagrams = "^0.19.1"
scour = "^0.38.2"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.yarn
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | static
  )/
)
'''
